Финальное задание 12 го спринта. Рефакторинг кода по рекомендации ревьюера (удалена реализация inMemory), устранены прочие замечания по коду (финальная подстстка)